# VideoCompressR

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLI_CONTRACT.md  Cargo.toml  FEATURE_PARITY.md  IMPLEMENTATION_STATUS.md  README.md  RELEASE_CONTRACT.md  UX_CONTRACT.md  deny.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/: dependabot.yml
.github/workflows/: ci.yml  e2e.yml  parity.yml  release.yml
apps/cli/: Cargo.toml
apps/cli/src/: main.rs
apps/cli/tests/: cli_contract.rs
apps/desktop/: eslint.config.js  index.html  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
apps/desktop/src/: App.test.tsx  App.tsx  i18n.ts  main.tsx
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/resources/config/i18n/: en.json  zh_cn.json
apps/desktop/src-tauri/src/: contracts.rs  lib.rs  main.rs
crates/vc-core/: Cargo.toml
crates/vc-core/src/: error.rs  lib.rs
crates/vc-core/tests/: core.rs
crates/vc-runtime/: Cargo.toml
crates/vc-runtime/src/: activity.rs  application.rs  error.rs  execution.rs  lib.rs  planning.rs  preview.rs  process_log.rs  scanner.rs  subtitles.rs
crates/vc-runtime/src/ffmpeg/: capabilities.rs  command.rs  discovery.rs  mod.rs  probe.rs  process.rs  progress.rs
crates/vc-runtime/src/platform/: paths.rs
crates/vc-runtime/src/queue/: supervisor.rs
crates/vc-runtime/src/storage/: app_config.rs  atomic_json.rs  capability_cache.rs  i18n.rs  mod.rs  presets.rs  settings.rs  window_state.rs
crates/vc-runtime/tests/: runtime.rs  stress.rs
crates/vc-testkit/: Cargo.toml
crates/vc-testkit/src/: lib.rs
docs/: DECISIONS.md  rust-tauri2-video-compressor-final-architecture.md
e2e/: smoke.e2e.mjs  wdio.conf.mjs
fixtures/fake-tools/: fake-fail.ps1  fake-fail.sh  fake-ffmpeg-item-fail.ps1  fake-ffmpeg-item-fail.sh  fake-ffmpeg.ps1  fake-ffmpeg.sh  fake-ffprobe-directory.ps1  fake-ffprobe-directory.sh  fake-ffprobe-fail.ps1  fake-ffprobe-fail.sh  fake-ffprobe.ps1  fake-ffprobe.sh  fake-hang.ps1  fake-hang.sh  fake-invalid-utf8.ps1  fake-invalid-utf8.sh  fake-large-ffprobe.ps1  fake-large-ffprobe.sh  fake-large-output.ps1  fake-large-output.sh  fake-queue-hang.ps1  fake-queue-hang.sh
fixtures/golden/: README.md  bitrate.json
fixtures/golden/argv/: cpu-hevc.json
fixtures/golden/plan/: cpu-hevc.json
fixtures/golden/queue/: serial-pause.json
fixtures/legacy/: gui-matrix.json  source-manifest.json
fixtures/legacy/capabilities/: README.md  fake.json
fixtures/legacy/cli/: capture-status.json  help.txt
scripts/: capture_legacy.py  check_architecture.py  check_tauri_resources.py  checksum.py  generate_bindings.py  package_release.sh  package_smoke.py  stage_ffmpeg.py  test_checksum.py  verify_release.sh  zip_release.py
(+31 files in other folders)
