[package]
name = "video-compressor"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "video-compressor"
path = "src/main.rs"

[dependencies]
clap.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
vc-core = { path = "../../crates/vc-core" }
vc-runtime = { path = "../../crates/vc-runtime" }

[dev-dependencies]
tempfile.workspace = true
